--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "next": "14.2.5",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
