--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "22.5.4",
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
