--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^5.0.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.7.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
